Preventing horizontal scrollbar on smaller screens.

--- a/bigbrother/static/css/dashboard.css
+++ b/bigbrother/static/css/dashboard.css
@@ -102,7 +102,7 @@ h2{
 
 #container{
     margin:170px auto;
-    width:1135px;
+    width:auto;
 }
 
 #dashboard ul{
